apps/kube-system/hubble-ui/base/hubble-ui-httproute.yaml
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: hubble-ui
  namespace: kube-system
  annotations:
    external-dns.alpha.kubernetes.io/hostname: hubble.apps.lab.mxe11.nl
spec:
  parentRefs:
    - name: cilium-secure-gateway
      namespace: cilium-gateway-system
      sectionName: https
  hostnames: [hubble.apps.lab.mxe11.nl]
  rules:
    - backendRefs:
        - name: hubble-ui
          port: 80
