apps/kube-system/hubble-ui/base/hubble-ui-ingressroute.yaml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: hubble-ui
  namespace: kube-system
  annotations:
    external-dns.alpha.kubernetes.io/hostname: hubble.apps.lab.mxe11.nl
    external-dns.alpha.kubernetes.io/target: traefik.lab.mxe11.nl
spec:
  entryPoints:
    - websecure
  routes:
    - match: Host(`hubble.apps.lab.mxe11.nl`)
      kind: Rule
      services:
        - name: hubble-ui
          port: 80
  tls:
    secretName: hubble-ui-tls # pragma: allowlist secret
